fix backround color on mobile bar

--- a/styles/components/mobile-nav.css
+++ b/styles/components/mobile-nav.css
@@ -5,7 +5,7 @@
   z-index: 999;
   width: 100%;
   height: 100%;
-  background-color: var(--clr-dark);
+  background-color: var(--clr-backgroud);
   display: none;
   justify-content: center;
   align-items: center;
